# CompetitiveProgramming

./: .gitignore  Cargo.toml  LICENSE
extra/first_bad_version/src/: main.rs
hands-on/dynamic_programming/: Cargo.toml  README.md
hands-on/segment_tree/: Cargo.toml  README.md
hands-on/segment_tree/src/: lib.rs  tests.rs  traits.rs  utils.rs
hands-on/sliding_window_maximum/: PlotResults.ipynb
hands-on/sliding_window_maximum/src/: lib.rs  main.rs
homework/crossing_the_desert/: Cargo.toml
homework/crossing_the_desert/src/: main.rs  tests.rs
homework/frogs_and_mosquitoes/: Cargo.toml  README.md
homework/frogs_and_mosquitoes/src/: main.rs
homework/ilya_and_queries/: Cargo.toml
homework/ilya_and_queries/src/: README.md  main.rs
homework/inversion_count/: Cargo.toml
homework/inversion_count/src/: main.rs
homework/kadane_algorithm/: Cargo.toml
homework/kadane_algorithm/src/: main.rs
homework/leaders_in_array/src/: main.rs
homework/little_girl_and_maximum_sum/: Cargo.toml
homework/little_girl_and_maximum_sum/src/: README.md  main.rs
homework/longest_k_good_segment/: Cargo.toml  README.md
homework/longest_k_good_segment/src/: main.rs
homework/maximum_path_sum/: README.md
homework/maximum_path_sum/src/: main.rs
homework/missing_number/src/: main.rs
homework/number_of_ways/: Cargo.toml
homework/the_monkey_and_the_oiled_bamboo/: Cargo.toml
homework/towers/: Cargo.toml
homework/two_types_of_spell/: Cargo.toml
homework_cpp/: leaders_in_array.cpp
resources/: leaders_in_array_input.txt  leaders_in_array_output.txt
(+13 files in other folders)
