[workspace]
members = [
	"hands-on/sliding_window_maximum",
	"hands-on/segment_tree",
	"hands-on/dynamic_programming",

	"homework/leaders_in_array",
	"homework/kadane_algorithm",
	"homework/missing_number",
	"homework/trapping_rain_water",
	"homework/sliding_window_maximum",
	"homework/crossing_the_desert",
	"homework/next_greater_element",
	"homework/towers",
	"homework/the_monkey_and_the_oiled_bamboo",
	"homework/inversion_count",
	"homework/two_types_of_spell",
	"homework/frogs_and_mosquitoes",
	"homework/maximum_path_sum",
	"homework/longest_k_good_segment",
	"homework/ilya_and_queries",
	"homework/number_of_ways",
	"homework/little_girl_and_maximum_sum",

	"extra/first_bad_version"
]